force-app/main/default/objects/Case/fields/Student_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Student_Last_Name__c</fullName>
    <label>Student Last Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>