force-app/main/default/objects/Case/fields/Student_Last_Name_Enr__c.field-meta.xml
<CustomField>
    <fullName>Student_Last_Name_Enr__c</fullName>
    <formula>Enrolment__r.Student__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Student Last Name(Enr)</label>
    <type>Text</type>
</CustomField>