force-app/main/default/objects/Case/fields/Student_Name__c.field-meta.xml
<CustomField>
    <fullName>Student_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Student Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Customer</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cases (Student Name)</relationshipLabel>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>