force-app/main/default/objects/Case/fields/Student_Name_from_Booking__c.field-meta.xml
<CustomField>
    <fullName>Student_Name_from_Booking__c</fullName>
    <formula>Booking__r.Student__r.FirstName &amp;&quot; &quot;&amp; Booking__r.Student__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Student Name (from Booking)</label>
    <type>Text</type>
</CustomField>