force-app/main/default/objects/Case/fields/Teacher_Bio__c.field-meta.xml
<CustomField>
    <fullName>Teacher_Bio__c</fullName>
    <label>Teacher Bio</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>