force-app/main/default/objects/Case/fields/Teacher_Enr__c.field-meta.xml
<CustomField>
    <fullName>Teacher_Enr__c</fullName>
    <formula>Enrolment__r.Teacher__r.FirstName  &amp;&quot; &quot;&amp; Enrolment__r.Teacher__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Teacher(Enr)</label>
    <type>Text</type>
</CustomField>