force-app/main/default/objects/Case/fields/Total_Invoice_topup__c.field-meta.xml
<CustomField>
    <fullName>Total_Invoice_topup__c</fullName>
    <label>Total Invoice topup</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>