force-app/main/default/objects/Case/fields/Trial_Attended_Date__c.field-meta.xml
<CustomField>
    <fullName>Trial_Attended_Date__c</fullName>
    <label>Trial Attended Date</label>
    <type>Date</type>
</CustomField>