force-app/main/default/objects/Case/fields/Trial_Booked_Date__c.field-meta.xml
<CustomField>
    <fullName>Trial_Booked_Date__c</fullName>
    <description>Managed by WorkFlow</description>
    <label>Trial Booked Date</label>
    <type>Date</type>
</CustomField>