force-app/main/default/objects/Case/fields/Trial_Booking_Gap__c.field-meta.xml
<CustomField>
    <fullName>Trial_Booking_Gap__c</fullName>
    <formula>Trial_Date__c  - Trial_Booked_Date__c</formula>
    <label>Trial Booking Gap</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>