force-app/main/default/objects/Case/fields/Trial_Cancelled_Date__c.field-meta.xml
<CustomField>
    <fullName>Trial_Cancelled_Date__c</fullName>
    <label>Trial Cancelled Date</label>
    <type>Date</type>
</CustomField>