force-app/main/default/objects/Case/fields/Trial_Date__c.field-meta.xml
<CustomField>
    <fullName>Trial_Date__c</fullName>
    <label>Trial Date</label>
    <type>Date</type>
</CustomField>