force-app/main/default/objects/Case/fields/Trial_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Trial_Date_Time__c</fullName>
    <description>Used in Case and Trial Bookings reports</description>
    <formula>IF (
ISPICKVAL(Booking__r.Type__c ,&quot;Trial&quot;)  ,
 Booking__r.Booking_Start_Date_Time__c  ,
&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trial Date &amp; Time</label>
    <type>Text</type>
</CustomField>