force-app/main/default/objects/Case/fields/Trial_No_Show_Date__c.field-meta.xml
<CustomField>
    <fullName>Trial_No_Show_Date__c</fullName>
    <label>Trial No Show Date</label>
    <type>Date</type>
</CustomField>