force-app/main/default/objects/Case/fields/Trial_Source__c.field-meta.xml
<CustomField>
    <fullName>Trial_Source__c</fullName>
    <description>Storing Trial source in case object from enrolment</description>
    <label>Trial Source</label>
    <length>200</length>
    <type>Text</type>
</CustomField>