force-app/main/default/objects/Case/fields/UTM_Adgroup__c.field-meta.xml
<CustomField>
    <fullName>UTM_Adgroup__c</fullName>
    <description>Ads related info - Pardot</description>
    <label>UTM Adgroup</label>
    <length>255</length>
    <type>Text</type>
</CustomField>