force-app/main/default/objects/Case/fields/X24_hrs_cancellation_approved_Reject_by__c.field-meta.xml
<CustomField>
    <fullName>X24_hrs_cancellation_approved_Reject_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field will indicate the name of the user that approved 24 hrs cancellation request</description>
    <label>24 hrs cancellation approved/Rejected by</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>