force-app/main/default/objects/Case/fields/X24_Hrs_Cancellation_Request__c.field-meta.xml
<CustomField>
    <fullName>X24_Hrs_Cancellation_Request__c</fullName>
    <label>24 Hrs Cancellation Request</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>