force-app/main/default/objects/Case/recordTypes/Sales_Enquiry.recordType-meta.xml
<RecordType>
    <fullName>Sales_Enquiry</fullName>
    <active>true</active>
    <businessProcess>Sales Enquiry</businessProcess>
    <description>Use this option to create a Sales Enquiry</description>
    <label>Sales Enquiry</label>
</RecordType>