force-app/main/default/objects/Case/recordTypes/Service_Request.recordType-meta.xml
<RecordType>
    <fullName>Service_Request</fullName>
    <active>true</active>
    <businessProcess>Service Request</businessProcess>
    <description>This this option to create a Service Request</description>
    <label>Service Request</label>
</RecordType>