force-app/main/default/objects/Case/listViews/Admin_Queue_Sales_Enquiries.listView-meta.xml
<ListView>
    <fullName>Admin_Queue_Sales_Enquiries</fullName>
    <booleanFilter>(1 or 2 or 3) AND 4 AND 5</booleanFilter>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>Status_Image__c</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.LAST_UPDATE_DATE_ONLY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Location__c</field>
        <operation>equals</operation>
        <value>XXXX</value>
    </filters>
    <filters>
        <field>Location__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>notEqual</operation>
        <value>Pending,Closed</value>
    </filters>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Sales_Enquiry</value>
    </filters>
    <label>Admin Queue (Sales Enquiries)</label>
</ListView>