force-app/main/default/objects/Case/listViews/All_Open_Sales_Enquiries.listView-meta.xml
<ListView>
    <fullName>All_Open_Sales_Enquiries</fullName>
    <booleanFilter>1 AND 2 and 3</booleanFilter>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>Location__c</columns>
    <columns>Stage__c</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>Status_Image__c</columns>
    <columns>Channel__c</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.CLOSED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Sales_Enquiry</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>New</value>
    </filters>
    <label>All Open Sales Enquiries</label>
</ListView>