force-app/main/default/objects/Case/listViews/All_Service_Requests.listView-meta.xml
<ListView>
    <fullName>All_Service_Requests</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>Status_Image__c</columns>
    <columns>Channel__c</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.CLOSED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Service_Request</value>
    </filters>
    <label>All Open Service Requests</label>
</ListView>