force-app/main/default/objects/Case/listViews/AllOpenCases.listView-meta.xml
<ListView>
    <fullName>AllOpenCases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>Status_Image__c</columns>
    <columns>Channel__c</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Location__c</columns>
    <columns>Centre_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.CLOSED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>New,Open</value>
    </filters>
    <label>All Open Cases</label>
</ListView>