force-app/main/default/objects/Case/listViews/Anchrorpoint_Case.listView-meta.xml
<ListView>
    <fullName>Anchrorpoint_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Anchrorpoint</label>
    <queue>Anchrorpoint</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>