force-app/main/default/objects/Case/listViews/Aureus_Kinex_Case.listView-meta.xml
<ListView>
    <fullName>Aureus_Kinex_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Aureus Kinex</label>
    <queue>Aureus_Kinex</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>