force-app/main/default/objects/Case/listViews/Aureus_Thomson_Plaza_Case.listView-meta.xml
<ListView>
    <fullName>Aureus_Thomson_Plaza_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Aureus Thomson Plaza</label>
    <queue>Aureus_Thomson_Plaza</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>