force-app/main/default/objects/Case/listViews/Bedok_Mall_Queue_Case.listView-meta.xml
<ListView>
    <fullName>Bedok_Mall_Queue_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Bedok Mall Queue</label>
    <queue>Bedok_Mall_Queue</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>