force-app/main/default/objects/Case/listViews/Bug_Defect_Queue_Case.listView-meta.xml
<ListView>
    <fullName>Bug_Defect_Queue_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Bug/Defect Queue</label>
    <queue>Bug_Defect_Queue</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>