force-app/main/default/objects/Case/listViews/Case_HR_Queue_Case.listView-meta.xml
<ListView>
    <fullName>Case_HR_Queue_Case</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CASES.TYPE</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>Status_Image__c</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>New</value>
    </filters>
    <label>New Cases - HR Queue</label>
    <queue>Case_HR_Queue</queue>
    <sharedTo>
        <group>Aureus_HR</group>
    </sharedTo>
</ListView>