force-app/main/default/objects/Case/listViews/Case_IT_Queue_Case.listView-meta.xml
<ListView>
    <fullName>Case_IT_Queue_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Case IT Queue</label>
    <queue>Case_IT_Queue</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>