force-app/main/default/objects/Case/listViews/Case_Ops_Queue_Case.listView-meta.xml
<ListView>
    <fullName>Case_Ops_Queue_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Case Operations Queue</label>
    <queue>Case_Ops_Queue</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>